# outside

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
src/: __init__.py  protocol_http.py
src/outside/: __init__.py  __main__.py  code_description.py  protocol_http.py  protocol_rtmp.py  protocol_websocket.py  utility.py
