[project]
name = "outside-framework"
version = "1.5.4"
authors = [
    { name = "toni08", email = "hello1502.channel@gmail.com" }
]
description = "An easy-to-use python web framework. Inspired by Flask."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/toni08bit/outside"
Issues = "https://github.com/toni08bit/outside/issues"
